--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.901.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -8,7 +9,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "multer-s3": "^3.0.1",
+    "mysql2": "^3.15.1",
     "nodemon": "^2.0.20"
   },
   "name": "api",
