--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "migrate": "knex migrate:latest --knexfile ./knexfile.cjs",
+    "migrate:rollback": "knex migrate:rollback --knexfile ./knexfile.cjs",
+    "migrate:status": "knex migrate:status --knexfile ./knexfile.cjs",
+    "seed": "knex seed:run --knexfile ./knexfile.cjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "knex": "^3.1.0"
+  }
 }
